--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
+.header {
+  background-color: #f5ba13;
+  margin: auto -16px;
+  padding: 16px 32px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+.header h1 {
+  color: #fff;
+  font-family: "McLaren", cursive;
+  font-weight: 200;
+  margin: 0;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  height: 50px;
   text-align: center;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer p {
+  color: #ccc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  min-width: 50px;
+  min-height: 50px;
+  border: none;
+  font-size: 30px;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-button {
+  position: absolute;
+  right: 40px;
+  bottom: 50px;
+}
+.add-note {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+  width: 480px;
+  border-radius: 3px;
+  margin: 30px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.add-note input,
+.add-note textarea {
+  padding: 4px;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  font-family: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-note input {
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.add-note button {
+  width: 100px;
+  font-size: 16px;
+  min-height: 40px;
+  cursor: pointer;
+}
+
+.note {
+  width: 200px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+  padding: 10px;
+  margin: 16px;
+  border-radius: 5px;
+  min-height: 120px;
+  position: relative;
+}
+
+.note h1 {
+  margin: 0;
+}
+
+button:disabled {
+  opacity: 0.6;
+}
+
+.notes-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 0 50px;
 }
